--- a/init.rk30board.rc
+++ b/init.rk30board.rc
@@ -1,7 +1,6 @@
 
 import init.rk30board.usb.rc
 import init.${ro.hardware}.bootmode.${ro.bootmode}.rc
-import init.${ro.hardware}.environment.rc
 import init.connectivity.rc
 
 on early-init
@@ -9,6 +8,42 @@ on early-init
     mkdir /mnt/external_sd 0000 system system
     export THIRD_VOLUME_STORAGE /mnt/usb_storage/USB_DISK0
     mkdir /mnt/usb_storage 0755 system system
+
+on init
+
+loglevel 8
+
+# for adobe reader mobile
+    export RK_ADOBE_DE_MOBILE 1
+    export EBOOK_PAGE_VISIBLE_NUMBER 2
+    export RK_ADEPT_DEVICE_TYPE mobile
+    export RK_ADOBE_DE_DOC_FOLDER "/mnt/sdcard/Digital Editions"
+    export RK_ADEPT_ACTIVATION_FILE /mnt/sdcard/.adobe-digital-editions/activation.xml
+    export RK_ADEPT_DEVICE_FILE /mnt/sdcard/.adobe-digital-editions/device.xml
+    export RK_ADEPT_DEVICE_SALT_FILE /mnt/sdcard/.adobe-digital-editions/devicesalt
+    export ADOBE_FONTS_DIR  /system/fonts/adobefonts/
+    export HOST_STORAGE_DIRECTORY_EXTERN_0 /mnt/usb_storage/USB_DISK0
+    export HOST_STORAGE_DIRECTORY_EXTERN_1 /mnt/usb_storage/USB_DISK1
+    export HOST_STORAGE_DIRECTORY_EXTERN_2 /mnt/usb_storage/USB_DISK2
+    export HOST_STORAGE_DIRECTORY_EXTERN_3 /mnt/usb_storage/USB_DISK3
+    export HOST_STORAGE_DIRECTORY_EXTERN_4 /mnt/usb_storage/USB_DISK4
+    export HOST_STORAGE_DIRECTORY_EXTERN_5 /mnt/usb_storage/USB_DISK5
+
+    export EXTERNAL_STORAGE /mnt/internal_sd
+    export EXTERNAL_STORAGE_FLASH /mnt/internal_sd
+    export EMULATED_STORAGE_SOURCE /mnt/internal_sd
+
+    mkdir /metadata 0770 root root
+    mkdir /mnt/internal_sd 0000 system system
+    mkdir /mnt/shell/emulated 0700 shell shell
+    mkdir /storage/emulated 0555 root root
+
+    # Create private mountpoint so we can MS_MOVE from staging
+    mount tmpfs tmpfs /mnt/secure mode=0700,uid=0,gid=0
+
+    # Directory for multi usb storage
+    mkdir /mnt/usb_storage 0700 root system
+    mount tmpfs tmpfs /mnt/usb_storage mode=0555,uid=1013,gid=1023
 
 on post-fs
     insmod /system/lib/modules/ump.ko
@@ -25,6 +60,9 @@ on post-fs
     chmod 770 /data/gps
     chown system net_bt_stack /data/gps
 
+    mount rootfs rootfs / rw remount
+    mount tmpfs tmpfs /mnt/secure private rec
+
 on post-fs-data
     # we will remap this as /mnt/sdcard with the sdcard fuse tool
     mkdir /data/media 0770 media_rw media_rw
@@ -37,29 +75,8 @@ on post-fs-data
     copy /etc/ppp/pap-secrets /data/misc/ppp/pap-secrets
     copy /etc/ppp/pppoe.conf /data/misc/ppp/pppoe.conf
 
-on init
-# for adobe reader mobile
-    export RK_ADOBE_DE_MOBILE 1
-    export EBOOK_PAGE_VISIBLE_NUMBER 2　
-    export RK_ADEPT_DEVICE_TYPE mobile
-    export RK_ADOBE_DE_DOC_FOLDER "/mnt/sdcard/Digital Editions"
-    export RK_ADEPT_ACTIVATION_FILE /mnt/sdcard/.adobe-digital-editions/activation.xml
-    export RK_ADEPT_DEVICE_FILE /mnt/sdcard/.adobe-digital-editions/device.xml
-    export RK_ADEPT_DEVICE_SALT_FILE /mnt/sdcard/.adobe-digital-editions/devicesalt
-    export ADOBE_FONTS_DIR  /system/fonts/adobefonts/
-    export HOST_STORAGE_DIRECTORY_EXTERN_0 /mnt/usb_storage/USB_DISK0
-    export HOST_STORAGE_DIRECTORY_EXTERN_1 /mnt/usb_storage/USB_DISK1
-    export HOST_STORAGE_DIRECTORY_EXTERN_2 /mnt/usb_storage/USB_DISK2
-    export HOST_STORAGE_DIRECTORY_EXTERN_3 /mnt/usb_storage/USB_DISK3
-    export HOST_STORAGE_DIRECTORY_EXTERN_4 /mnt/usb_storage/USB_DISK4
-    export HOST_STORAGE_DIRECTORY_EXTERN_5 /mnt/usb_storage/USB_DISK5
-    
+    mkdir /data/local/tmp/ctsScreenShot 0771 system system
 
-    mkdir /mnt/internal_sd 0000 system system
-    mkdir /mnt/shell/emulated 0700 shell shell
-    mkdir /storage/emulated 0555 root root
-
-    
 on boot
     setprop UserVolumeLabel "RockChips"
     mount debugfs /sys/kernel/debug /sys/kernel/debug
@@ -71,6 +88,10 @@ on boot
     chown system system /sys/class/backlight/rk28_bl/brightness
     
 #for hdmi timem out
+    chown root system /sys/class/display/HDMI/enable
+    chown root system /sys/class/display/HDMI/mode
+    chown root system /sys/class/display/HDMI/scale
+
     chown root system /sys/class/graphics/fb0/blank
     chmod 0664 /sys/class/graphics/fb0/blank
 
@@ -92,12 +113,37 @@ on boot
 # for usb switch 
     chown system system /sys/bus/platform/drivers/usb20_otg/force_usb_mode
 
+# Set this property so surfaceflinger is not started by system_init
+    setprop system_init.startsurfaceflinger 0
+
+service displayd /system/bin/displayd
+    class main
+    socket displayd stream 0660 root system
+
+service shutdownanim /system/bin/bootanimation -shutdown
+    class main
+    user graphics
+    group graphics
+    disabled
+    oneshot
+
+service rkflash_recovery /system/bin/install-recovery.sh
+     class main
+     oneshot
+
+service drmservice /system/bin/drmservice
+    class main
+    oneshot
+
 # create virtual SD card at /mnt/sdcard, based on the /data/media directory
 # daemon will drop to user/group system/media_rw after initializing
 # underlying files in /data/media will be created with user and group media_rw (1023)
 service sdcard /system/bin/sdcard -u 1023 -g 1023 -l /data/media /mnt/shell/emulated
     class main
     
+on property:selinux.reload_policy=1
+    restart ueventd
+    restart installd
 
 on property:ro.factory.hasUMS=false
     symlink /storage/emulated/legacy /sdcard
@@ -157,11 +203,11 @@ service iprenew_p2p system/bin/dhcpcd -n
     disabled
     oneshot
 # bugreport is triggered by holding down volume down, volume up and power
-# service bugreport /system/bin/bugreport.sh
-#     class main
-#     disabled
-#     oneshot
-#     keycodes 114 115 116
+service bugreport /system/bin/bugreport.sh
+    class main
+    disabled
+    oneshot
+    keycodes 114 115 116
 
 service chrome /system/bin/chrome.sh
     class main
@@ -209,11 +255,11 @@ on charger
 service charger /charger
     disabled
 
-# service akmd /system/bin/akmd
-#         class main
-#         user system
-#         group system
-#         oneshot
+service akmd /system/bin/akmd
+        class main
+        user system
+        group system
+        oneshot
 
 on property:sys.gmali.performance=ui
     start pat_ui
@@ -235,35 +281,35 @@ service pat_video /system/bin/performance video
     disabled
     oneshot
         
-# service pppoe_setup /system/bin/pppoe-setup
-#     disabled
-#     oneshot
+service pppoe_setup /system/bin/pppoe-setup
+    disabled
+    oneshot
 
-# service pppoe_start /system/bin/pppoe-start
-#     disabled
-#     oneshot
+service pppoe_start /system/bin/pppoe-start
+    disabled
+    oneshot
     
-# service bplus_helper  /system/bin/bplus_helper
-#     class main
-#     oneshot
+service bplus_helper  /system/bin/bplus_helper
+    class main
+    oneshot
 
-# service pppoe_stop /system/bin/pppoe-stop
-#     disabled
-#     oneshot
+service pppoe_stop /system/bin/pppoe-stop
+    disabled
+    oneshot
 
-# on property:ro.rk.btchip=broadcom.bplus
-#     start gpsd
+on property:ro.rk.btchip=broadcom.bplus
+    start gpsd
 
-# service gpsd  /system/bin/glgps -c /system/etc/gps/gpsconfig.xml
-#     class main
-#     disabled
-#     user root
-#     group system
+service gpsd  /system/bin/glgps -c /system/etc/gps/gpsconfig.xml
+    class main
+    disabled
+    user root
+    group system
 
-# service cifsmanager /data/etc/cifsmanager.sh
-#     disabled
-#     oneshot
+service cifsmanager /data/etc/cifsmanager.sh
+    disabled
+    oneshot
 
-# service iso_operate /data/bluray.sh
-#     disabled
-#     oneshot
+service iso_operate /data/bluray.sh
+    disabled
+    oneshot
