--- a/init.connectivity.rc
+++ b/init.connectivity.rc
@@ -70,3 +70,22 @@ service hostapd /system/bin/hostapd /data/misc/wifi/hostapd.conf
     disabled
     oneshot
 
+service dhcpcd_wlan0 /system/bin/dhcpcd -ABKL
+    class main
+    disabled
+    oneshot
+
+service iprenew_wlan0 system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
+
+service dhcpcd_p2p /system/bin/dhcpcd -aABKL
+    class main
+    disabled
+    oneshot
+
+service iprenew_p2p system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
