--- a/init.connectivity.rc
+++ b/init.connectivity.rc
@@ -89,3 +89,23 @@ service iprenew_p2p system/bin/dhcpcd -n
     class main
     disabled
     oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+    class main
+	disabled
+	oneshot
+
+service iprenew_eth0 system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
+
+service dhcpcd_bt-pan /system/bin/dhcpcd -ABKL
+    class main
+    disabled
+    oneshot
+
+service iprenew_bt-pan /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
